--- a/css/paperstyle.css
+++ b/css/paperstyle.css
@@ -1,32 +1,40 @@
-#paper-container{
+#paper-container {
     margin-top: 100px;
     margin-bottom: 100px;
 }
 
-#paper-container p, h5{
+#paper-container p,
+h5 {
     margin: 0;
     padding: 0;
 }
 
-#paper-fourth-sem a{
+#paper-fourth-sem a {
     text-decoration: none;
     color: black;
 }
 
-#paper-fourth-sem a:hover{
+#paper-fourth-sem a:hover {
     color: blue;
 }
 
-#paper-model{
+#paper-model {
     margin-right: 20px;
     margin-left: 4px;
 }
 
-#paper-year{
+#paper-year {
     margin-bottom: 10px;
+    color: black;
 }
-#paper-year button{
+
+#paper-year button {
     border: 2px solid blue;
     font-size: small;
+}
+
+.paper-year-style {
+    background-color: blue;
     color: white;
+    font-weight: bold;
 }
