--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@
 
 #csit-sem-sub div {
     border: 2px solid white;
-    margin: 15px;
+    margin: 25px;
 }
 
 
@@ -132,4 +132,12 @@
 #csit-sem-sub ol li a:hover {
     color: blue;
     cursor: pointer;
+}
+
+
+.zoominout:hover{
+    transform: scale(1.2);
+    transition: 0.4s linear;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    0.3em 0.3em 1em rgba(0, 0, 0, 0.3) !important;
 }
