--- a/css/style.css
+++ b/css/style.css
@@ -130,14 +130,16 @@
 }
 
 #csit-sem-sub ol li a:hover {
-    color: blue;
     cursor: pointer;
+    color: blue;
 }
 
-
+/* Zoom In Zoom Out Section */
 .zoominout:hover{
-    transform: scale(1.2);
+    transform: scale(1.1);
     transition: 0.4s linear;
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(20, 9, 61),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3) !important;
+    background-color: #BDBFC1;
+    border-radius: 20px !important;
 }
