--- a/css/style.css
+++ b/css/style.css
@@ -135,9 +135,12 @@
 }
 
 /* Zoom In Zoom Out Section */
+.zoominout{
+    transition: 1s;
+}
+
 .zoominout:hover{
     transform: scale(1.1);
-    transition: 0.4s linear;
     box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(20, 9, 61),
     0.3em 0.3em 1em rgba(0, 0, 0, 0.3) !important;
     background-color: #BDBFC1;
