--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,7 @@
 
 .zoominout:hover{
     transform: scale(1.1);
-    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(20, 9, 61),
-    0.3em 0.3em 1em rgba(0, 0, 0, 0.3) !important;
+    box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(20, 9, 61), 0.3em 0.3em 1em rgba(0, 0, 0, 0.3) !important;
     background-color: #BDBFC1;
     border-radius: 20px !important;
 }
