--- a/css/paperstyle.css
+++ b/css/paperstyle.css
@@ -43,3 +43,15 @@ h5 {
   color: white;
   font-weight: bold;
 }
+
+
+.costume-shadow{
+  border-radius: 20px;
+  box-shadow: inset 0 -3em 3em rgba(0, 0, 0, 0.1), 0 0 0 2px rgb(255, 255, 255),
+  0.3em 0.3em 1em rgba(0, 0, 0, 0.3) !important;
+}
+
+#footer-section-2{
+  border-radius: 10px;
+  margin: 4px 2px;
+}
