--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@
     padding: 15px 10px;
     color: white;
     font-size: 20px;
-    margin: 0px 2px;
+    margin: 4px 2px;
 }
 
 #footer-section i {
@@ -76,6 +76,8 @@
     padding-bottom: 60px;
     background-color: #eceff1;
     padding-top: 80px;
+    border-radius: 10px;
+    margin: 4px 2px;
 }
 
 #footer-section-2 hr {
